[tool.poetry]
name = "acc-program-application-autotracker"
version = "0.1.0"
description = ""
authors = ["NOOMA-42 <tzuchun42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
